# greenhouse-project

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  code-formatting.sh
application/: CMakeLists.txt
application/inc/: awsiotclient.hpp  awsiotthread.hpp  defs.hpp  radiothread.hpp  radiothreadcontroller.hpp  radiothreadhub.hpp  sensorscontroller.hpp  timedmeter.hpp  uithread.hpp  wificontroller.hpp
application/src/: awsiotclient.cpp  awsiotthread.cpp  radiothread.cpp  radiothreadcontroller.cpp  radiothreadhub.cpp  sensorscontroller.cpp  timedmeter.cpp  uithread.cpp  wificontroller.cpp
common/: CMakeLists.txt  defs.hpp  types.hpp  utils.hpp
common/interfaces/: iadc.hpp  igpio.hpp  ii2c.hpp  iled.hpp  iradio.hpp  isensors.hpp  ispi.hpp  istorage.hpp  itimer.hpp  itransceiver.hpp
components/: CMakeLists.txt
components/inc/: button.hpp  isensors.hpp  rfm95.hpp  rgbbase.hpp  sht40.hpp  sx127xmodem.hpp  sx127xregisters.hpp  ws2812b.hpp
components/src/: button.cpp  rfm95.cpp  rgbbase.cpp  sht40.cpp  sx127xmodem.cpp  ws2812b.cpp
core/hardware/: CMakeLists.txt
core/hardware/inc/: adc.hpp  gpio.hpp  hrtimer.hpp  i2c.hpp  ii2c.hpp  ledc.hpp  nvsstore.hpp  spi.hpp
core/hardware/src/: adc.cpp  gpio.cpp  hrtimer.cpp  i2c.cpp  ledc.cpp  nvsstore.cpp  spi.cpp
core/network/: CMakeLists.txt
core/network/inc/: wifi.hpp
core/network/src/: wifi.cpp
core/software/: CMakeLists.txt
core/software/inc/: delay.hpp  eventgroup.hpp  queue.hpp  threadbase.hpp  ticks.hpp  timer.hpp
core/software/src/: delay.cpp  eventgroup.cpp  queue.cpp  threadbase.cpp  (+1 more)
greenhouse-controller/: CMakeLists.txt
greenhouse-controller/main/: main.cpp
hub/: CMakeLists.txt
hub/main/: CMakeLists.txt  main.cpp
main/: CMakeLists.txt  main.cpp
packet/: CMakeLists.txt
packet/inc/: awspacket.hpp  radiopacket.hpp
packet/src/: awspacket.cpp  radiopacket.cpp
(+1 files in other folders)
